# stravalib

./: .buildinfo  .gitignore  README.md  api.html  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: documentation-issue.yml
.github/PULL_REQUEST_TEMPLATE/: regular-pr
.github/workflows/: build-test.yml  push-pypi.yml
_modules/: index.html
_modules/stravalib/: attributes.html  client.html  exc.html  model.html  protocol.html  tests.html  unithelper.html
api/: stravalib.attributes.html  stravalib.client.html  stravalib.exc.html  stravalib.html  stravalib.model.html  stravalib.protocol.html  stravalib.tests.auth_responder.html  stravalib.tests.functional.test_client.html  stravalib.tests.functional.test_client_rate_limiter.html  stravalib.tests.functional.test_client_utils.html  stravalib.tests.functional.test_client_write.html  stravalib.tests.functional.test_result_iterator.html  stravalib.tests.html  stravalib.tests.unit.html  stravalib.tests.unit.test_attributes.html  stravalib.tests.unit.test_limiter.html  stravalib.tests.unit.test_model.html  stravalib.unithelper.html  stravalib.util.html  stravalib.util.limiter.html
docs/: conf.py  contributing.rst  index.rst  reference.rst
docs/reference/: model.rst
doctrees/: api.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree
doctrees/api/: stravalib.attributes.doctree  stravalib.client.doctree  stravalib.doctree  stravalib.exc.doctree  stravalib.model.doctree  stravalib.protocol.doctree  stravalib.tests.auth_responder.doctree  stravalib.tests.doctree  (+13 more)
get-started/: activities.html  athletes.html  auth.html  index.html  installation.html  overview.html
html/: objects.inv  search.html
reference/: activityUploader.html  attributes.html  client.html  exceptions.html  model.html  protocol.html  unithelper.html  utilities.html
stravalib/: attributes.py  client.py  exc.py  model.py  protocol.py  unithelper.py
(+144 files in other folders)
